--- a/Main.ipynb
+++ b/Main.ipynb
@@ -265,7 +265,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = DatasetFolder(CLASSES_DIR, loader = lambda path: pq.read_table(path).to_pandas().dropna(), is_valid_file = lambda _: True)\n",
+    "dataset = DatasetFolder(\n",
+    "    CLASSES_DIR, loader = lambda path: pq.read_table(path).to_pandas().dropna(), is_valid_file = lambda _: True)\n",
     "\n",
     "n_val   = int(len(dataset) * VALID_PART)\n",
     "n_test  = int(len(dataset) * TEST_PART)\n",
@@ -506,7 +507,7 @@
     ")\n",
     "\n",
     "df['sign'].value_counts().tail(10).sort_values(ascending = True).plot(\n",
-    "    kind = \"barh\", ax = ax2, title = 'Bottom 20 Signs in Dataset'\n",
+    "    kind = \"barh\", ax = ax2, title = 'Bottom 10 Signs in Dataset'\n",
     ")\n",
     "\n",
     "ax1.set_xlabel('Number of Training Examples')\n",
