--- a/Model.ipynb
+++ b/Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,13 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "DEVICE = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "BATCH_SIZE = 128\n",
-    "NUM_WORKERS = 0"
+    "NUM_WORKERS = 0\n",
+    "NUM_EPOCHS = 50"
    ]
   },
   {
@@ -81,7 +82,8 @@
    "outputs": [],
    "source": [
     "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.Adam(model.fc.parameters())"
+    "optimizer = optim.Adam(model.fc.parameters(), lr = 0.0001)\n",
+    "lr_scheduler = torch.optim.lr_scheduler.CosineAnnealingWarmRestarts(optimizer, T_0=1, T_mult=2, eta_min=5e-5)"
    ]
   },
   {
@@ -94,8 +96,8 @@
     "valid_losses = []\n",
     "train_acc = []\n",
     "valid_acc = []\n",
-    "\n",
-    "def train_model(model, criterion, optimizer, num_epochs=20):\n",
+    "lr = [0.0001]\n",
+    "def train_model(model, criterion, optimizer, num_epochs=NUM_EPOCHS):\n",
     "    best_model_wts = copy.deepcopy(model.state_dict())\n",
     "    best_acc = 0.0\n",
     "    for epoch in range(num_epochs):\n",
@@ -125,8 +127,10 @@
     "\n",
     "                _, preds = torch.max(outputs, 1)\n",
     "                running_loss += loss.item() * inputs.size(0)\n",
-    "                running_corrects += torch.sum(preds == labels.data) # TODO\n",
+    "                running_corrects += torch.sum(id_2_sign_map[preds] == id_2_sign_map[labels]) # from Dataset (test)\n",
     "\n",
+    "            lr_scheduler.step()\n",
+    "            lr.append(optimizer.param_groups[0][\"lr\"])\n",
     "            epoch_loss = running_loss / len(dataset[phase])\n",
     "            epoch_acc = running_corrects.double() / len(dataset[phase])\n",
     "            \n",
@@ -147,37 +151,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_losses' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 11\u001b[0m\n\u001b[1;32m      9\u001b[0m     plt\u001b[39m.\u001b[39mylabel(title)\n\u001b[1;32m     10\u001b[0m     plt\u001b[39m.\u001b[39mshow()\n\u001b[0;32m---> 11\u001b[0m legend(list_1 \u001b[39m=\u001b[39m train_losses, label_1\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mTrain\u001b[39m\u001b[39m'\u001b[39m, step \u001b[39m=\u001b[39m \u001b[39m5\u001b[39m, title\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mLoss\u001b[39m\u001b[39m'\u001b[39m, list_2 \u001b[39m=\u001b[39m valid_losses, label_2\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mValid\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'train_losses' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "fig = plt.figure(figsize=(10, 10))\n",
-    "\n",
-    "plt.plot(train_losses[1:], label='train')\n",
-    "plt.plot(valid_losses[1:], label='valid')\n",
-    "plt.legend()\n",
-    "plt.xlabel('Iterations')\n",
-    "plt.ylabel('Loss')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plt.figure(figsize=(10, 10))\n",
-    "plt.plot(train_acc[1:], label='train')\n",
-    "plt.plot(valid_acc[1:], label='valid')\n",
-    "plt.legend()\n",
-    "plt.xlabel('Iterations')\n",
-    "plt.ylabel('Loss')"
+    "def legend(list_1, label_1, step, title, list_2=None, label_2=None):\n",
+    "    fig = plt.figure(figsize=(10, 10))\n",
+    "    plt.plot(list_1[1:], label=label_1)\n",
+    "    if list_2 is not None:\n",
+    "        plt.plot(list_2[1:], label=label_2)\n",
+    "    plt.xticks(range(1, NUM_EPOCHS + step, step))\n",
+    "    plt.legend()\n",
+    "    plt.xlabel('Iterations')\n",
+    "    plt.ylabel(title)\n",
+    "    plt.show()\n",
+    "legend(list_1 = train_losses, label_1='Train', step = 5, title='Loss', list_2 = valid_losses, label_2='Valid')\n",
+    "legend(list_1 = train_acc, label_1='Train', step = 5, title='Accuracy', list_2 = valid_acc, label_2='Valid')\n",
+    "legend(list_1 = lr, label_1='Lr', step = 5, title='Learning rate')\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
