Слияние датасета с моделью

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2,23 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
+    "import copy\n",
     "import json\n",
     "import os\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import pyarrow.parquet as pq\n",
+    "import torch.optim as optim\n",
     "import mediapipe as mp\n",
+    "import torch.nn as nn\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
+    "from torch.optim.lr_scheduler import CosineAnnealingWarmRestarts\n",
     "from torch.utils.data.sampler import SubsetRandomSampler\n",
     "from torch.utils.data import Dataset, DataLoader\n",
-    "from tqdm import tqdm; tqdm.pandas();"
+    "from tqdm import tqdm, trange"
    ]
   },
   {
@@ -31,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,8 +47,8 @@
     }
    ],
    "source": [
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "print(\"Current device:\", device)"
+    "DEVICE = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "print(\"Current device:\", DEVICE)"
    ]
   },
   {
@@ -57,21 +61,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# File directories\n",
-    "DATA_DIR       = './asl-signs/' #'/kaggle/input/asl-signs/'\n",
+    "DATA_DIR       = './asl-signs/'\n",
     "LANDMARK_FILES = 'train_landmark_files'\n",
     "CSV_FILE       = 'train.csv'\n",
     "ID_TO_SIGN_MAP = 'sign_to_prediction_index_map.json'\n",
     "\n",
     "#Dataset settings\n",
-    "VAL_PART   = 0.1\n",
-    "SHUFFLE    = True\n",
-    "MAX_ROWS   = 300\n",
-    "BATCH_SIZE = 128"
+    "VAL_PART    = 0.1\n",
+    "SHUFFLE     = True\n",
+    "MAX_ROWS    = 300\n",
+    "BATCH_SIZE  = 128\n",
+    "NUM_WORKERS = 0\n",
+    "PIN_MEMORY  = False\n",
+    "\n",
+    "# Training settings\n",
+    "LR           = 5e-3\n",
+    "WEIGHT_DECAY = 5e-5\n",
+    "NUM_EPOCHS   = 100\n",
+    "\n",
+    "# Scheduler settings\n",
+    "T_0     = 1\n",
+    "T_MULT  = 2\n",
+    "ETA_MIN = 5e-5"
    ]
   },
   {
@@ -84,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +186,7 @@
        "4   owie  "
       ]
      },
-     "execution_count": 395,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +352,7 @@
        "4   owie  164  "
       ]
      },
-     "execution_count": 399,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +469,7 @@
        "4     14  14-face-4  face               4  0.441155  0.338613 -0.073218"
       ]
      },
-     "execution_count": 400,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +601,7 @@
        "4           0  "
       ]
      },
-     "execution_count": 401,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,8 +640,9 @@
     "         (9,13),(13,14),(14,15),(15,16),(13,17),(17,18),(18,19),(19,20)]\n",
     "    \n",
     "    pose_edges = [(15, 21), (16, 20), (18, 20), (3, 7), (14, 16), (23, 25), (28, 30), (11, 23), (27, 31), \n",
-    "                  (6, 8), (15, 17), (24, 26), (16, 22), (4, 5), (5, 6), (29, 31), (12, 24), (23, 24), (0, 1), (9, 10), (1, 2), (0, 4), \n",
-    "                  (11, 13), (30, 32), (28, 32), (15, 19), (16, 18), (25, 27), (26, 28), (12, 14), (17, 19), (2, 3), (11, 12), (27, 29), (13, 15)]\n",
+    "                  (6, 8), (15, 17), (24, 26), (16, 22), (4, 5), (5, 6), (29, 31), (12, 24), (23, 24), (0, 1), \n",
+    "                  (9, 10), (1, 2), (0, 4), (11, 13), (30, 32), (28, 32), (15, 19), (16, 18), (25, 27), (26, 28),\n",
+    "                  (12, 14), (17, 19), (2, 3), (11, 12), (27, 29), (13, 15)]\n",
     "\n",
     "    for ax, type in zip(axs, [\"face\", \"pose\", \"right_hand\", \"left_hand\"]):\n",
     "        \n",
@@ -663,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +772,7 @@
     "train_indices, val_indices = indices[n_val:], indices[:n_val]\n",
     "\n",
     "train_sampler = SubsetRandomSampler(train_indices)\n",
-    "valid_sampler = SubsetRandomSampler(val_indices)"
+    "val_sampler   = SubsetRandomSampler(val_indices)"
    ]
   },
   {
@@ -768,26 +785,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "torch.Size([128, 300, 9])"
-      ]
-     },
-     "execution_count": 406,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([128, 300, 9])\n",
+      "torch.Size([128])\n"
+     ]
     }
    ],
    "source": [
-    "train_loader = DataLoader(dataset, batch_size = BATCH_SIZE, sampler = train_sampler)\n",
-    "val_loader   = DataLoader(dataset, batch_size = BATCH_SIZE, sampler = valid_sampler)\n",
+    "data_loader = {\n",
+    "    'train':\n",
+    "        DataLoader(dataset, batch_size = BATCH_SIZE, sampler = train_sampler, num_workers = NUM_WORKERS, pin_memory = PIN_MEMORY),\n",
+    "    'valid':\n",
+    "        DataLoader(dataset, batch_size = BATCH_SIZE, sampler = val_sampler, num_workers = NUM_WORKERS, pin_memory = PIN_MEMORY)\n",
+    "}\n",
     "\n",
-    "df, label = next(iter(train_loader))\n",
-    "df.shape"
+    "df, label = next(iter(data_loader['train']))\n",
+    "print(df.shape)\n",
+    "print(label.shape)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Creating a model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Net(nn.Module):\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        super(Net, self).__init__()\n",
+    "\n",
+    "        self.fc1 = nn.Linear(3, 128)\n",
+    "        self.fc2 = nn.Linear(128, 64)\n",
+    "        self.fc3 = nn.Linear(64, 32)\n",
+    "        self.fc4 = nn.Linear(32, 16)\n",
+    "        self.fc5 = nn.Linear(16 * 543, 250)\n",
+    "        self.relu = nn.ReLU()\n",
+    "        self.flatten = nn.Flatten()\n",
+    "        self.softmax = nn.Softmax()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        \n",
+    "        x = self.relu(self.fc1(x))\n",
+    "        x = self.relu(self.fc2(x))\n",
+    "        x = self.relu(self.fc3(x))\n",
+    "        x = self.relu(self.fc4(x))\n",
+    "        x = self.flatten(x)\n",
+    "        x = self.fc5(x)\n",
+    "\n",
+    "        return self.softmax(x)\n",
+    "    \n",
+    "model = Net().to(DEVICE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "criterion    = nn.CrossEntropyLoss()\n",
+    "optimizer    = optim.Adam(model.parameters(), lr = LR, weight_decay = WEIGHT_DECAY)\n",
+    "lr_scheduler = CosineAnnealingWarmRestarts(optimizer, T_0 = T_0, T_mult = T_MULT, eta_min = ETA_MIN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/100 [00:06<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "mat1 and mat2 must have the same dtype",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[18], line 67\u001b[0m\n\u001b[0;32m     62\u001b[0m         pbar\u001b[39m.\u001b[39mset_description(\n\u001b[0;32m     63\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mAvg. train/valid loss: [\u001b[39m\u001b[39m{\u001b[39;00mtrain_losses[epoch]\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m{\u001b[39;00mval_losses[epoch]\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m], train/valid IOU: [\u001b[39m\u001b[39m{\u001b[39;00mtrain_acc[epoch]\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m%/\u001b[39m\u001b[39m{\u001b[39;00mval_acc[epoch]\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m%]\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     65\u001b[0m     \u001b[39mreturn\u001b[39;00m model\u001b[39m.\u001b[39mload_state_dict(best_model_wts)\n\u001b[1;32m---> 67\u001b[0m model \u001b[39m=\u001b[39m train_model(model, criterion, optimizer)\n",
+      "Cell \u001b[1;32mIn[18], line 31\u001b[0m, in \u001b[0;36mtrain_model\u001b[1;34m(model, criterion, optimizer, num_epochs)\u001b[0m\n\u001b[0;32m     28\u001b[0m inputs \u001b[39m=\u001b[39m inputs\u001b[39m.\u001b[39mto(DEVICE)\n\u001b[0;32m     29\u001b[0m labels \u001b[39m=\u001b[39m labels\u001b[39m.\u001b[39mto(DEVICE)\n\u001b[1;32m---> 31\u001b[0m outputs \u001b[39m=\u001b[39m model(inputs)\n\u001b[0;32m     32\u001b[0m loss \u001b[39m=\u001b[39m criterion(outputs, labels)\n\u001b[0;32m     34\u001b[0m \u001b[39mif\u001b[39;00m phase \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mtrain\u001b[39m\u001b[39m'\u001b[39m:                   \n",
+      "File \u001b[1;32md:\\Program Files (x86)\\Python\\Python310\\lib\\site-packages\\torch\\nn\\modules\\module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1496\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1497\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1498\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[0;32m   1499\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1500\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1501\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m   1502\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[0;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+      "Cell \u001b[1;32mIn[16], line 17\u001b[0m, in \u001b[0;36mNet.forward\u001b[1;34m(self, x)\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, x):\n\u001b[1;32m---> 17\u001b[0m     x \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrelu(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mfc1(x))\n\u001b[0;32m     18\u001b[0m     x \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrelu(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfc2(x))\n\u001b[0;32m     19\u001b[0m     x \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrelu(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfc3(x))\n",
+      "File \u001b[1;32md:\\Program Files (x86)\\Python\\Python310\\lib\\site-packages\\torch\\nn\\modules\\module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1496\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1497\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1498\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[0;32m   1499\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1500\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1501\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m   1502\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[0;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+      "File \u001b[1;32md:\\Program Files (x86)\\Python\\Python310\\lib\\site-packages\\torch\\nn\\modules\\linear.py:114\u001b[0m, in \u001b[0;36mLinear.forward\u001b[1;34m(self, input)\u001b[0m\n\u001b[0;32m    113\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tensor:\n\u001b[1;32m--> 114\u001b[0m     \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39;49mlinear(\u001b[39minput\u001b[39;49m, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mweight, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mbias)\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: mat1 and mat2 must have the same dtype"
+     ]
+    }
+   ],
+   "source": [
+    "train_losses = []\n",
+    "val_losses   = []\n",
+    "train_acc    = []\n",
+    "val_acc      = []\n",
+    "\n",
+    "lr = [LR]\n",
+    "\n",
+    "def train_model(model, criterion, optimizer, num_epochs = NUM_EPOCHS):\n",
+    "    \n",
+    "    best_model_wts = copy.deepcopy(model.state_dict())\n",
+    "    best_acc = 0.0\n",
+    "\n",
+    "    for epoch in (pbar := trange(num_epochs)):\n",
+    "\n",
+    "        for phase in ['train', 'validation']:\n",
+    "\n",
+    "            if phase == 'train':\n",
+    "                model.train()\n",
+    "\n",
+    "            else:\n",
+    "                model.eval()\n",
+    "\n",
+    "            running_loss     = 0.0\n",
+    "            running_corrects = 0\n",
+    "\n",
+    "            for inputs, labels in data_loader[phase]:\n",
+    "                \n",
+    "                inputs = inputs.to(DEVICE)\n",
+    "                labels = labels.to(DEVICE)\n",
+    "\n",
+    "                outputs = model(inputs)\n",
+    "                loss    = criterion(outputs, labels)\n",
+    "\n",
+    "                if phase == 'train':                   \n",
+    "                    optimizer.zero_grad()\n",
+    "                    loss.backward()\n",
+    "                    optimizer.step()\n",
+    "\n",
+    "                _, preds = torch.max(outputs, 1)\n",
+    "\n",
+    "                running_loss     += loss.item() * inputs.size(0)\n",
+    "                running_corrects += torch.sum(id_2_sign_map[preds] == id_2_sign_map[labels]) # from Dataset (test)\n",
+    "\n",
+    "            lr_scheduler.step()\n",
+    "            lr.append(optimizer.param_groups[0][\"lr\"])\n",
+    "\n",
+    "            epoch_loss = running_loss / len(dataset[phase])\n",
+    "            epoch_acc  = running_corrects.double() / len(dataset[phase])\n",
+    "            \n",
+    "            if phase == 'train':\n",
+    "                train_losses.append(epoch_loss)\n",
+    "                train_acc.append(epoch_acc)\n",
+    "\n",
+    "            else:\n",
+    "                val_losses.append(epoch_loss)\n",
+    "                val_acc.append(epoch_acc)\n",
+    "                \n",
+    "                if best_acc < epoch_acc: \n",
+    "                    best_acc = epoch_acc\n",
+    "                    best_model_wts = copy.deepcopy(model.state_dict())\n",
+    "       \n",
+    "        pbar.set_description(\n",
+    "            f'Avg. train/valid loss: [{train_losses[epoch]:.2f}/{val_losses[epoch]:.2f}], train/valid IOU: [{train_acc[epoch]:.2f}%/{val_acc[epoch]:.2f}%]')\n",
+    "        \n",
+    "    return model.load_state_dict(best_model_wts)\n",
+    "\n",
+    "model = train_model(model, criterion, optimizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def legend(list_1, label_1, step, title, list_2 = None, label_2 = None):\n",
+    "\n",
+    "    plt.plot(list_1[1:], label = label_1)\n",
+    "\n",
+    "    if list_2 is not None:\n",
+    "        plt.plot(list_2[1:], label = label_2)\n",
+    "\n",
+    "    plt.xticks(range(1, NUM_EPOCHS + step, step))\n",
+    "    plt.xlabel('Iterations')\n",
+    "    plt.ylabel(title)\n",
+    "\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
+    "\n",
+    "legend(list_1 = train_losses, label_1 = 'Train', step = 5, title = 'Loss', list_2 = val_losses, label_2 = 'Valid')\n",
+    "legend(list_1 = train_acc, label_1 = 'Train', step = 5, title = 'Accuracy', list_2 = val_acc, label_2 = 'Valid')\n",
+    "legend(list_1 = lr, label_1 = 'Lr', step = 5, title = 'Learning rate')"
    ]
   }
  ],
