--- a/all_tst.ipynb
+++ b/all_tst.ipynb
@@ -129,17 +129,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-23T21:21:05.248494Z",
-     "start_time": "2023-05-23T21:21:05.205956600Z"
+     "end_time": "2023-05-23T21:45:48.977143800Z",
+     "start_time": "2023-05-23T21:45:48.957624400Z"
     }
    },
    "outputs": [],
    "source": [
-    "def create_test_df(input_dir,out_dir):\n",
+    "def create_test_df(input_dir):\n",
     "    mp_holistic = mp.solutions.holistic\n",
     "    mp_drawing = mp.solutions.drawing_utils\n",
     "\n",
@@ -252,12 +252,13 @@
     "    df_right_hand = pd.DataFrame(right_hand_list, columns=['frame', 'type', 'landmark_index', 'x', 'y', 'z'])\n",
     "    df_pose = pd.DataFrame(pose_list, columns=['frame', 'type', 'landmark_index', 'x', 'y', 'z'])\n",
     "    df = pd.concat([df_face, df_left_hand,df_right_hand,df_pose], ignore_index=True)\n",
-    "    df.to_csv(out_dir)"
+    "    return df\n",
+    "    # df.to_csv(out_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "def create_video():\n",
@@ -285,42 +286,164 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-23T21:23:04.675602Z",
-     "start_time": "2023-05-23T21:23:04.654742300Z"
+     "end_time": "2023-05-23T21:45:49.522504Z",
+     "start_time": "2023-05-23T21:45:49.501505900Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-23T21:23:05.503894100Z",
-     "start_time": "2023-05-23T21:23:05.474894700Z"
+     "end_time": "2023-05-23T21:47:19.453137600Z",
+     "start_time": "2023-05-23T21:47:19.413354100Z"
     }
    },
    "outputs": [],
    "source": [
-    "def get_dataframe(out):\n",
+    "def get_dataframe():\n",
     "    create_video()\n",
     "    video = 'output.mp4'\n",
     "    # print(video)\n",
     "    inp_dir = cut_video(video)\n",
-    "    out_df_dir = out\n",
+    "    # out_df_dir = out\n",
     "\n",
-    "    create_test_df(inp_dir,out_df_dir)"
+    "    df = create_test_df(inp_dir)\n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-23T21:48:27.224158300Z",
+     "start_time": "2023-05-23T21:47:21.109407600Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Photo processed:  0\n",
+      "Photo processed:  1\n",
+      "Photo processed:  2\n",
+      "Photo processed:  3\n",
+      "Photo processed:  4\n",
+      "Photo processed:  5\n",
+      "Photo processed:  6\n",
+      "Photo processed:  7\n",
+      "Photo processed:  8\n",
+      "Photo processed:  9\n",
+      "Photo processed:  10\n",
+      "Photo processed:  11\n",
+      "Photo processed:  12\n",
+      "Photo processed:  13\n",
+      "Photo processed:  14\n",
+      "Photo processed:  15\n",
+      "Photo processed:  16\n",
+      "Photo processed:  17\n",
+      "Photo processed:  18\n",
+      "Photo processed:  19\n",
+      "Photo processed:  20\n",
+      "Photo processed:  21\n",
+      "Photo processed:  22\n",
+      "Photo processed:  23\n",
+      "Photo processed:  24\n",
+      "Photo processed:  25\n",
+      "Photo processed:  26\n",
+      "Photo processed:  27\n",
+      "Photo processed:  28\n",
+      "Photo processed:  29\n",
+      "Photo processed:  30\n",
+      "Photo processed:  31\n",
+      "Photo processed:  32\n",
+      "Photo processed:  33\n",
+      "Photo processed:  34\n",
+      "Photo processed:  35\n",
+      "Photo processed:  36\n",
+      "Photo processed:  37\n",
+      "Photo processed:  38\n",
+      "Photo processed:  39\n",
+      "Photo processed:  40\n",
+      "Photo processed:  41\n",
+      "Photo processed:  42\n",
+      "Photo processed:  43\n",
+      "Photo processed:  44\n",
+      "Photo processed:  45\n",
+      "Photo processed:  46\n",
+      "Photo processed:  47\n",
+      "Photo processed:  48\n",
+      "Photo processed:  49\n",
+      "Photo processed:  50\n",
+      "Photo processed:  51\n",
+      "Photo processed:  52\n",
+      "Photo processed:  53\n",
+      "Photo processed:  54\n",
+      "Photo processed:  55\n",
+      "Photo processed:  56\n",
+      "Photo processed:  57\n",
+      "Photo processed:  58\n",
+      "Photo processed:  59\n",
+      "Photo processed:  60\n",
+      "Photo processed:  61\n",
+      "Photo processed:  62\n",
+      "Photo processed:  63\n",
+      "Photo processed:  64\n",
+      "Photo processed:  65\n",
+      "Photo processed:  66\n",
+      "Photo processed:  67\n",
+      "Photo processed:  68\n",
+      "Photo processed:  69\n",
+      "Photo processed:  70\n",
+      "Photo processed:  71\n",
+      "Photo processed:  72\n",
+      "Photo processed:  73\n",
+      "Photo processed:  74\n",
+      "Photo processed:  75\n",
+      "Photo processed:  76\n",
+      "Photo processed:  77\n",
+      "Photo processed:  78\n",
+      "Photo processed:  79\n",
+      "Photo processed:  80\n",
+      "Photo processed:  81\n",
+      "Photo processed:  82\n",
+      "Photo processed:  83\n",
+      "Photo processed:  84\n",
+      "Photo processed:  85\n",
+      "Photo processed:  86\n",
+      "Photo processed:  87\n",
+      "Photo processed:  88\n",
+      "Photo processed:  89\n",
+      "Photo processed:  90\n",
+      "Photo processed:  91\n",
+      "Photo processed:  92\n",
+      "Photo processed:  93\n",
+      "Photo processed:  94\n",
+      "Photo processed:  95\n",
+      "       frame  type  landmark_index         x         y         z\n",
+      "0          0  face               0  0.413353  1.042298 -0.052775\n",
+      "1          0  face               1  0.413818  0.979536 -0.060119\n",
+      "2          0  face               2  0.413624  1.007818 -0.043246\n",
+      "3          0  face               3  0.405056  0.943616 -0.028855\n",
+      "4          0  face               4  0.414044  0.964477 -0.058850\n",
+      "...      ...   ...             ...       ...       ...       ...\n",
+      "52123     95  pose              28  0.298420  3.781735  1.652897\n",
+      "52124     95  pose              29  0.721662  3.934988  1.028114\n",
+      "52125     95  pose              30  0.293038  3.897053  1.728529\n",
+      "52126     95  pose              31  0.628706  4.068819  0.041222\n",
+      "52127     95  pose              32  0.369891  4.062366  0.687730\n",
+      "\n",
+      "[52128 rows x 6 columns]\n"
+     ]
+    }
+   ],
    "source": [
-    "get_dataframe('C:/Users/super/Desktop/NSU Student/SocialNetwork/full_test_df.csv')"
+    "print(get_dataframe())"
    ]
   },
   {
